# invest-web

./: Cargo.toml  README.md  index.html  index.scss
src/: app.rs  error.rs  main.rs
src/components/: list_errors.rs  mod.rs  modal.rs  user_context_provider.rs
src/components/table/: error.rs  macros.rs  mod.rs  table.rs  types.rs
src/hooks/: use_user_context.rs
src/pages/: admin.rs  confirm_email.rs  footer.rs  header.rs  home.rs  invest.rs  login.rs  mod.rs  overview.rs  page_not_found.rs  portfolio.rs  profile.rs  register.rs
src/pages/admin/: investments.rs  mod.rs  roles.rs  users.rs
src/pages/admin/investments/: cost_line.rs  costs.rs  delete_investment_modal.rs  list.rs  mod.rs  modal.rs  picture.rs  pictures.rs  tag.rs  tags.rs
src/pages/admin/roles/: delete_role_modal.rs  list.rs  mod.rs  modal.rs  permission.rs  role_list.rs  role_modal.rs
src/pages/admin/users/: list.rs  mod.rs  modal.rs
src/services/: admin.rs  auth.rs  mod.rs  requests.rs
src/types/: auth.rs  mod.rs
src/utils/: investments.rs
