[package]
name = "invest-web"
version = "0.1.0"
edition = "2021"
description = "Invest web project"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.8.0"
lazy_static = "1.4"
parking_lot = "0.12.1"
reqwest = { version = "0.11.7", features = ["json"] }
serde = "1"
serde-value = "0.7"
thiserror = "1"
time = { version = "0.3.17", features = ["parsing", "macros", "formatting"] }
tracing = "0.1"
tracing-wasm = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = "0.20"
yew-hooks = "0.2.0"
yew-router = "0.17"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
opt-level = 'z'
